--- a/src/app/visualize/visualize.component.html
+++ b/src/app/visualize/visualize.component.html
@@ -1,3 +1,3 @@
 <div class="visualContainer">
-    <iframe src="https://shashank01729.github.io/N-Queen/" width="100%" height="500px" style="border:none;" scrolling="no"></iframe>
+    <iframe src="https://shashank01729.github.io/N-Queen-Visualiser/" width="100%" height="500px" style="border:none;" scrolling="no"></iframe>
 </div>
